@@ -51,15 +51,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 409)
-(Parent-Version lpmud 3-3 408)
-(Version-Log "Added the object load time to OBJ_DUMP.
-Removed a memory leak in dumpstat() and dumpstat_dest().
-Alien-lfun closures are printed as string with their bound object as well.
-ed: Consecutive 'z' or 'Z' no longer repeat the previous current line.")
+(Project-Version lpmud 3-3 410)
+(Parent-Version lpmud 3-3 409)
+(Version-Log "Added time delay before a dirty mapping is compacted.")
 (New-Version-Log
 "")
-(Checkin-Time "Mon, 03 Mar 2003 13:37:28 -0700")
+(Checkin-Time "Mon, 03 Mar 2003 20:04:58 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -96,7 +93,7 @@ ed: Consecutive 'z' or 'Z' no longer repeat the previous current line.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.59 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.472 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.473 644))
   (HISTORY (lpmud/f/49_HISTORY 1.306 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -157,7 +154,7 @@ ed: Consecutive 'z' or 'Z' no longer repeat the previous current line.")
   (src/array.h (lpmud/f/47_array.h 1.18.1.21 644))
   (src/array.c (lpmud/d/12_array.c 1.46.1.47.1.2 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.7 644))
-  (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.24 644))
+  (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.25 644))
   (src/bitstrings.h (lpmud/i/47_bitstrings 1.3 644))
   (src/bitstrings.c (lpmud/i/48_bitstrings 1.14 644))
   (src/bytecode.h (lpmud/a/b/26_bytecode.h 1.1.1.2 644))
@@ -169,7 +166,7 @@ ed: Consecutive 'z' or 'Z' no longer repeat the previous current line.")
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.31 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.24 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
-  (src/dumpstat.c (lpmud/c/34_dumpstat.c 1.20.1.11.1.6 644))
+  (src/dumpstat.c (lpmud/c/34_dumpstat.c 1.20.1.11.1.7 644))
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.6 644))
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.28 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.19.1.1 644))
@@ -179,7 +176,7 @@ ed: Consecutive 'z' or 'Z' no longer repeat the previous current line.")
   (src/files.c (lpmud/i/50_files.c 1.20 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.14 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.95 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.96 644))
   (src/hash.h (lpmud/f/32_hash.h 1.5 644))
   (src/hash.c (lpmud/c/28_hash.c 1.15 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.5 644))
@@ -191,8 +188,8 @@ ed: Consecutive 'z' or 'Z' no longer repeat the previous current line.")
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.48 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.13 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.37 644))
-  (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.14 644))
-  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.56 644))
+  (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.15 644))
+  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.57 644))
   (src/md5.h (lpmud/l/18_md5.h 1.2 644))
   (src/md5.c (lpmud/l/19_md5.c 1.6 644))
   (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.6 644))
@@ -272,7 +269,7 @@ ed: Consecutive 'z' or 'Z' no longer repeat the previous current line.")
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.5 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.17.1.3 644))
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.31 644))
-  (src/simulate.c (lpmud/31_simulate.c 1.88.1.102 644))
+  (src/simulate.c (lpmud/31_simulate.c 1.88.1.103 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.73 644))
   (src/structs.h (lpmud/d/b/5_structs.h 1.3 644))
