@@ -1,6 +1,11 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+03-Mar-2002 (Lars Duening)  (3.3.410)
+  - (mapping, backend.c, gcollect.c) Experimental: dirty mappings are
+       not compacted immediately, but only after a certain time (for now
+       10 minutes) since the last change has elapsed.
+
 03-Mar-2002 (Lars Duening)  (3.3.409)
   - (dumpstat.c) Added the object load time to the OBJ_DUMP data (suggested by
        Menaures).
